name:                patents
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dmvianna/patents#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Vianna
maintainer:          dmvianna <at> gmail.com
copyright:           2017 Daniel Vianna
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable patents
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       Frames
                     , base
                     , bytestring
                     , foldl
                     , ghc-mod
                     , microlens
                     , pipes
                     , readable
                     , text
                     , trifecta
                     , vector
                     , vinyl
                     , raw-strings-qq
                     , hspec
